--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.1'
-
 services:
 
   ghost:
@@ -7,22 +5,25 @@ services:
     build: .
     restart: always
     ports:
-      - 8085:2368
+      - 2368:2368
     environment:
       # # see https://ghost.org/docs/config/#configuration-options
       # database__client: mysql
       # database__connection__host: db
-      # database__connection__user: userOne
+      # database__connection__user: user1
       # database__connection__password: secretPassword
       # database__connection__database: ghost
-      url: http://localhost:8085
+
+      url: http://localhost:2368 # Change this
+
       NODE_ENV: development # default: production
+
       storage__active: s3
-      storage__s3__accessKeyId: accessKey
-      storage__s3__secretAccessKey: accessKeySecret
-      storage__s3__region: ap-southeast-1
-      storage__s3__bucket: ghost-blog-demo
-      # storage__s3__assetHost: <Cloudfront URL>
+      storage__s3__accessKeyId: accessKey # Change this
+      storage__s3__secretAccessKey: accessKeySecret # Change this
+      storage__s3__region: AWS-S3-REGION # Change this
+      storage__s3__bucket: BucketName # Change this
+      storage__s3__assetHost: https://UNIQUE.cloudfront.net # Change this
       storage__s3__pathPrefix: images # Optional, Set this if you want all images to be stored in a subfolder
       storage__s3__forcePathStyle: true
       storage__s3__acl: private
