--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,10 +4,13 @@ on:
   push:
     branches:
       - "main"
+    tags:
+      - "v*"
 
 jobs:
-  docker:
+  build-and-push:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -24,8 +27,19 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_SECRET }}
 
-      - name: Build and push
+      - name: Build and push with latest tag
         uses: docker/build-push-action@v5
         with:
+          context: "."
+          platforms: "linux/amd64,linux/arm64"
           push: true
-          tags: beevk/ghost-s3:latest
+          tags: "${{ github.repository }}:latest"
+
+      - name: Build and push with actual version
+        if: github.ref_name != ''
+        uses: docker/build-push-action@v5
+        with:
+          context: "."
+          platforms: "linux/amd64,linux/arm64"
+          push: true
+          tags: ${{ github.repository }}:${{ github.ref_name }}
