--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,9 +3,7 @@ name: Publish Docker image
 on:
   push:
     tags:
-      - "v*"
-    branches:
-      - release
+      - "release/**"
 
 jobs:
   build-and-push:
@@ -27,7 +25,12 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_SECRET }}
 
-      - name: Build and push with latest tag
+      - name: Extract version from tag
+        id: extract_version
+        run: |
+          echo "version=${GITHUB_REF#refs/tags/release/}" >> $GITHUB_OUTPUT
+
+      - name: Build and push with latest & actual version tag
         uses: docker/build-push-action@v5
         with:
           context: "."
@@ -35,4 +38,4 @@ jobs:
           push: true
           tags: |
             "${{ github.repository }}:latest"
-            "${{ github.repository }}:${{ github.ref_name }}"
+            "${{ steps.extract_version.outputs.version }}"
