--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,8 @@ on:
   push:
     tags:
       - "v*"
+    branches:
+      - release
 
 jobs:
   build-and-push:
@@ -25,12 +27,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_SECRET }}
 
-      - name: Extract version from tag
-        id: extract_version
-        run: |
-          echo "version=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
-
-      - name: Build and push with latest & actual version tag
+      - name: Build and push with latest tag
         uses: docker/build-push-action@v5
         with:
           context: "."
@@ -38,4 +35,4 @@ jobs:
           push: true
           tags: |
             "${{ github.repository }}:latest"
-            "${{ steps.extract_version.outputs.version }}"
+            "${{ github.repository }}:${{ github.ref_name }}"
