--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,5 +37,5 @@ jobs:
           platforms: "linux/amd64,linux/arm64"
           push: true
           tags: |
-            "${{ github.repository }}:latest"
-            "${{ steps.extract_version.outputs.version }}"
+            "beevk/ghost-s3:latest"
+            "beevk/ghost-s3:${{ steps.extract_version.outputs.version }}"
